# fury-tracer

./: .gitignore  Cargo.toml  README.md  readme.txt  render_video.py  run_jsons.sh
src/: aabb.rs  acceleration.rs  bbox.rs  brdf.rs  camera.rs  dataforms.rs  geometry.rs  image.rs  interval.rs  json_deserialized.rs  json_parser.rs  json_structs.rs  lib.rs  light.rs  main.rs  material.rs  mesh.rs  numeric.rs  pixel.rs  prelude.rs  ray.rs  renderer.rs  sampler.rs  scene.rs  shapes.rs  tonemap.rs
