[package]
name = "fury-tracer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "raytracer"
path = "src/main.rs"


[dependencies]
bevy_math = {version = "0.17.1", features = ["serialize"]}
png = "0.18.0"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde-ply = "0.2.1"
serde_json = "1.0"
smart-default = "0.7.1"
tracing = "0.1"
tracing-subscriber = "0.3"
void = "1.0.2"

